testing/tests/roundtrip/invalid/semantic/typecheck/bool_as_index/01/via-conjure.generated-error.txt
Error running `conjure pretty`: Error:
    tests/roundtrip/invalid/semantic/typecheck/bool_as_index/01/input.essence:3:13:
  |
3 | such that m[b] = 5
  |             ^
Type error:
	Expected: int
	Got: bool

tests/roundtrip/invalid/semantic/typecheck/bool_as_index/01/input.essence:4:13:
  |
4 | such that m[b,2] = [5, 4]
  |             ^
Type error:
	Expected: int
	Got: bool

tests/roundtrip/invalid/semantic/typecheck/bool_as_index/01/input.essence:4:15:
  |
4 | such that m[b,2] = [5, 4]
  |               ^
Error: Type int does not support indexing

